--- a/spendoo-main-web/public/css/component-style.css
+++ b/spendoo-main-web/public/css/component-style.css
@@ -130,6 +130,7 @@
   height: 65dvh;
   border-radius: 0 0 16px 16px;
   overflow-y: auto; /* Changed to auto to allow scrolling */
+  overflow-x: hidden;
   position: relative;
   background-color: rgba(138, 192, 156, 0.12); /* #8ac09c1e */
   padding: 0;
