--- a/spendoo-main-web/public/css/variables.css
+++ b/spendoo-main-web/public/css/variables.css
@@ -8,7 +8,7 @@
   --sp-gray: #B0B0B0;
   --sp-light-gray: #D9D9D9;
   --sp-white: #FFFFFF;
-  
+  overflow-y: hidden;
 }
 
 :root::-webkit-scrollbar {
